# learn-ai-with-grey8

./: .env.example  .gitignore  CLA.md  CLAUDE.md  LICENSE  Makefile  README.md  setup_dirs.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_contribution.md  feature_request.md
.github/workflows/: ace-curate.yml  ace-reflect-weekly.yml  ace-sync-check.yml  cla.yml  pytest.yml
ace/: pyproject.toml
ace/ace/: __init__.py  cli.py  sync.py
ace/ace/curator/: curate.py  linter.py
ace/ace/generator/: generate.py
ace/ace/generator/templates/: exercise_prompt.txt  lesson_prompt.txt  quiz_prompt.txt  spec_example.yml
ace/ace/reflector/: analytics.py  reflect.py
ace/ace/shared/: config.py  ollama.py  schema.py
ace/specs/: phase-01.yml  phase-02.yml  phase-03.yml  phase-04.yml  phase-05.yml  phase-06.yml  phase-07.yml  phase-08.yml  phase-09.yml  phase-10.yml  phase-11.yml  phase-12.yml
ace/tests/: test_cli.py  test_linter.py
curriculum/: curriculum_index.json  manifest.json  schema.json
docker/: docker-compose.hosted.yml  docker-compose.yml  tutor.Dockerfile  web.Dockerfile
docs/: _sidebar.md  certification.md  contributing.md  course-guide.md  employers.md  getting-started.md  home.md  index.html  services.md
local-dev/configs/: ollama-modelfile.txt  vscode-settings.json
local-dev/scripts/: setup-ollama.sh  verify-setup.sh
pitch/: README.md  enterprise-deck.md  university-deck.md
scripts/: build-pitch.ps1  generate_curriculum_index.py  setup-hooks.sh  setup.sh  start.sh
tutor/: pyproject.toml
(+426 files in other folders)
